--- a/jogo/src/index.css
+++ b/jogo/src/index.css
@@ -8,7 +8,7 @@ html{
   justify-content: center;
   align-items: center;
 
-  background-color: #f4f4f4;
+  background-color: #6c7bff;
   
   font-family: Helvetica;
   text-align: center;
@@ -19,8 +19,8 @@ html{
   width: 100px;
   height: 100px;
 
-  background-color: #ddd;
-  border: 1px solid #ccc;
+  background-color: #b6b6f7;
+  border: 5px solid #5005ff;
   
   font-size: 32px;
   font-weight: bold;
@@ -31,8 +31,8 @@ html{
 }
 
 /* Estilo para o vencedor */
-.winner {
-  background-color: #ffcc00;
+.winner, .draw {
+  background-color: #a79bff;
 }
 
 /* Estilo para o status do jogo */
@@ -41,7 +41,7 @@ html{
 
   text-align: center;
   font-size: 24px;
-  color: #333;
+  color: #5b25ff;
 }
 
 /* Estilo para o botão de reiniciar */
